# Kalinin_TPO_Lab1

.github/workflows/: cmake-single-platform.yml
lib/: lr1.cpp  lr1.h
tests/: CMakeLists.txt  lr1_test.cpp  mainInput.txt  test.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
